# pulser-diff

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py  test_on_push.sh
.github/workflows/: build_docs.yml  lint.yml  publish.yml  test.yml  test_notebooks.yml
docs/: basic_usage.ipynb  gate_optimization.ipynb  index.md  state_preparation.ipynb
docs/javascripts/: mathjax.js
pulser_diff/: __init__.py  backend.py  derivative.py  dynamiqs_backend.py  dynamiqs_result.py  hamiltonian.py  model.py  requirements.txt  result.py  simconfig.py  simresults.py  utils.py  waveform_funcs.py
pulser_diff/dq/: README  __init__.py  _utils.py  solver.py  time_tensor.py
pulser_diff/dq/mesolve/: __init__.py  adaptive.py  me_solver.py  mesolve.py
pulser_diff/dq/sesolve/: __init__.py  adaptive.py  sesolve.py
pulser_diff/dq/solvers/: options.py  result.py  solver.py
pulser_diff/dq/solvers/ode/: adaptive_solver.py  adjoint_ode_solver.py  ode_solver.py
pulser_diff/dq/solvers/utils/: __init__.py  utils.py
pulser_diff/dq/utils/: __init__.py  operators.py  states.py  tensor_types.py  utils.py
pulser_diff/pulser/: __init__.py  _version.py  math.py  pulse.py  result.py  torch.py  waveforms.py
pulser_diff/pulser/backend/: __init__.py  abc.py  config.py  noise_model.py  qpu.py  remote.py
pulser_diff/pulser/channels/: __init__.py  base_channel.py  channels.py  dmm.py  eom.py
pulser_diff/pulser/devices/: __init__.py  _device_datacls.py  _devices.py  _mock_device.py
pulser_diff/pulser/devices/interaction_coefficients/: C6_coeffs.json  __init__.py
pulser_diff/pulser/json/: coders.py  supported.py  utils.py
pulser_diff/pulser/json/abstract_repr/: __init__.py  deserializer.py  serializer.py  signatures.py  validation.py
pulser_diff/pulser/parametrized/: __init__.py  decorators.py  paramabc.py  paramobj.py  variable.py
pulser_diff/pulser/register/: __init__.py  _coordinates.py  _patterns.py  _reg_drawer.py  base_register.py  mappable_reg.py  register.py  register3d.py  register_layout.py  special_layouts.py  traps.py  weight_maps.py
pulser_diff/pulser/sampler/: __init__.py  sampler.py  samples.py
pulser_diff/pulser/sequence/: __init__.py  _basis_ref.py  _decorators.py  _schedule.py  _seq_drawer.py  _seq_str.py  sequence.py
pulser_diff/pulser/simulation/: __init__.py
pulser_diff/pulser_simulation/: __init__.py  _version.py  hamiltonian.py  qutip_backend.py  qutip_result.py  simconfig.py  simresults.py  simulation.py
tests/: conftest.py  metrics.py  test_derivatives.py  test_model.py  test_noise.py  test_notebooks.py  test_waveform_funcs.py
tutorials/: basic_usage.ipynb  calculating_derivatives.ipynb  dynamiqs_vs_krylov.ipynb  pulse_optimization.ipynb  test_doppler.ipynb
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/basic_usage/: index.html
v0.1.0/gate_optimization/: index.html
v0.1.0/search/: search_index.json
v0.1.0/state_preparation/: index.html
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/basic_usage/: index.html
v0.1.1/gate_optimization/: index.html
v0.1.1/state_preparation/: index.html
