[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulser-diff"
description = "Differentiable backend for Pulser"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.9,<3.11"
license = {text = "Proprietary"}
keywords = ["quantum", "pulser"]
authors = [
  { name = "Vytautas Abramavicius", email = "vytautas.abramavicius@pasqal.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# always specify a version for each package
# to maintain consistency
dependencies = [
  "torch",
  "pulser @ git@github.com:pasqal-io/Pulser.git@va/pulser-torch"
]

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

# add one or more extras in the dependencies
[project.optional-dependencies]
extras = [
  "matplotlib>=3.5.0"
]

# install libraries from the Pasqal quantum libraries private PyPi repository
# ask in the relevant code Slack channels if you do not have the credentials
# to access the PyPi repository
[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://{env:PYPI_USERNAME}:{env:PYPI_PASSWORD}@gitlab.pasqal.com/api/v4/projects/190/packages/pypi/simple"

[project.urls]
Documentation = ""
Issues = "https://gitlab.pasqal.com/pqs/pulser-diff/-/issues"
Source = "https://gitlab.pasqal.com/pqs/pulser-diff"

[tool.hatch.build.targets.wheel]
packages = ["pulser_diff"]

[tool.hatch.envs.default]
dependencies = [
  "flaky",
  "hypothesis",
  "pytest",
  "pytest-cov",
  "pytest-mypy",
  "pytest-xdist",
  "nbconvert",
  "ipykernel",
  "pre-commit",
  "black",
  "isort",
  "ruff",
  "notebook<7.0",
  "dill",
]
features = ["all"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=qadence_extensions {args}"
test-examples = "pytest ./tests/test_examples.py {args}"
test-docs = "mkdocs build --clean --strict"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
addopts = """-vvv"""
xfail_strict = true
filterwarnings = [
  "ignore:Call to deprecated create function FieldDescriptor",
  "ignore:Call to deprecated create function Descriptor",
  "ignore:Call to deprecated create function EnumDescriptor",
  "ignore:Call to deprecated create function EnumValueDescriptor",
  "ignore:Call to deprecated create function FileDescriptor",
  "ignore:Call to deprecated create function OneofDescriptor",
  "ignore:distutils Version classes are deprecated."
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-section-index",
  "mkdocs-jupyter",
  "mkdocs-exclude",
  "markdown-exec",
  "notebook<7",
  "jupyter_contrib_nbextensions",
  "dill",
]
features = ["all"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310"]

[tool.coverage.run]
branch = true
parallel = true
# uncomment to omit any file from the
# coverage. Regexps can be used
# to select all files from a folder
#omit = [
#  "template_python/to_omit.py",
#]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
select = ["E", "F", "I", "Q"]
extend-ignore = ["F841"]
line-length = 100

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
